add const pagination

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -66,11 +66,11 @@ body {
 }
 
 
-.btn-hidden {
+.btn-hidden, .pag-hidden {
     opacity: 0;
 }
 
-.btn-open {
+.btn-open, .pag-open {
     opacity: 1;
 }
 
